automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,15 @@
     "        # create a version message\n",
     "        # send the command\n",
     "        # wait for a verack message\n",
-    "        fail"
+    "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
